--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@heroicons/react": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.9"
+    "styled-components": "^6.1.9",
+    "web3": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
