--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@heroicons/react": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.9",
+    "utils": "^0.3.1",
     "web3": "^4.8.0"
   },
   "devDependencies": {
