--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@tanstack/react-query": "^5.36.2",
+    "@web3modal/wagmi": "^4.2.1",
     "alpinejs": "^3.13.10",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.9",
     "utils": "^0.3.1",
+    "viem": "^2.10.9",
+    "wagmi": "^2.9.2",
     "web3": "^4.8.0"
   },
   "devDependencies": {
