--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.36.2",
     "@web3modal/wagmi": "^4.2.1",
     "alpinejs": "^3.13.10",
+    "ethers": "^6.12.1",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
